[package]
name = "tauri-plugin-graph-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etvr-utils = { path = "../util" }
thiserror = "1"
serde_json = "1"
axum = "0.6"
futures = "0.3"
chrono = { version = "0.4.26", default-features = false, features = ["std"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
dunce = "1.0.4"
error-stack = { version = "0.4.0", features = ["spantrace"] }
itertools = "0.11.0"
oauth2 = "4.4.1"
reqwest = { version = "0.11.20", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
test-case = "3.1.0"
tokio = { version = "1.32.0", features = ["fs", "process", "macros"] }
warp = "0.3.3"
tracing = "0.1.37"
tracing-error = "0.2.0"
veil = "0.1.6"
async-trait = "0.1.73"
graph-rs-sdk = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
tauri = { workspace = true }
tauri-specta = { workspace = true }
log = { workspace = true }
tiny_http = { workspace = true }
tauri-plugin-oauth = { workspace = true }

[dev-dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
tokio = { version = "1.32.0", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
