[package]
name = "tauri-plugin-splashscreen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../util" }
serde_json = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
tauri = { workspace = true }
tauri-specta = { workspace = true }
